tests/fixtures/negative/di-hygiene/HiltEntryPointOnNonInterface.kt
import dagger.hilt.EntryPoint
import dagger.hilt.InstallIn
import dagger.hilt.components.SingletonComponent

@EntryPoint
@InstallIn(SingletonComponent::class)
interface LegacyEntryPoint {
    fun api(): Api
}

interface Api
